add modle count endpoint and test and release docs
